Agregar todos los archivos del proyecto

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,13 @@
 /* You can add global styles to this file, and also import other style files */
+
+.cursor-pointer{
+  cursor: pointer;
+}
+
+.w-80px{
+  width: 80px;
+}
+
+.size-image{
+  width: 200px;
+}
